# flows

./: Cargo.toml  README.md
.devcontainer/: Dockerfile.devcontainer  devcontainer.json
crates/flows/: Cargo.toml
crates/flows-core/: Cargo.toml
crates/flows-core/src/: lib.rs
crates/flows-core/src/core/: control.rs  data.rs  flow.rs  handler.rs  mod.rs  slot.rs  traits.rs  waker.rs
crates/flows-core/src/runtime/: embassy.rs  mod.rs  tokio.rs
crates/flows-macros/: Cargo.toml
crates/flows/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/chat/: Cargo.toml
examples/chat/src/: main.rs
