[package]
name = "flows-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", default-features = false }
embassy-executor = { version = "0.8.0", optional = true }
embassy-time = { version = "0.4.0", optional = true }
futures-core = { version = "0.3.31", default-features = false }
heapless = { version = "0.8", features = ["portable-atomic"] }
portable-atomic = "1.11.1"
tokio = { version = "1.47.1", features = ["full"], optional = true }

[features]
default = ["std", "tokio"]
std = []
tokio = ["dep:tokio"]
embassy = ["embassy-executor", "embassy-time"]

